crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@compiler_artifact_fresh_target_bin_profile_release.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
Artifact up-to-date: myapp (bin)
