crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_error_with_code.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
error: unused variable: `x` (error: unused_variables)
