crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_future_incompat_with_warning_warning_without_code.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
Future incompatibility warnings detected:
warning: unused import: `std::io` (warning)
