crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_section_timing_end.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
Compilation section codegen end: codegen (2345678μs)
