crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_unused_externs_warn.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
warning: Unused dependencies: serde, tokio
