crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_warning_without_code.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
warning: unused import: `std::io` (warning)
