crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_lib_artifact_link.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
Generated artifact: target/debug/myapp (link)
