crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_lib_future_incompat_with_warning_error_with_code.snap
---
source: crates/cifmt/src/tool/cargo_check.rs
expression: formatted
---
Future incompatibility warnings detected:
error: unused variable: `x` (error: unused_variables)
